--- a/exGrupo.ipynb
+++ b/exGrupo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "ae2b83e5",
    "metadata": {},
    "outputs": [],
@@ -33,6 +33,7 @@
     "        'Escritório', 'Escritório', 'Eletrônico', 'Eletrônico', 'Eletrônico'\n",
     "    ],\n",
     "    'Preco_Unitario': [4500, 80, 350, 900, 1200, 3, 25, 1100, 250, 70]\n",
+    "    \n",
     "})\n",
     "\n",
     "df_vendas = pd.DataFrame({\n",
@@ -79,6 +80,7 @@
        "      <th>Nome_Produto</th>\n",
        "      <th>Categoria</th>\n",
        "      <th>Preco_Unitario</th>\n",
+       "      <th>valorTotal</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -93,6 +95,7 @@
        "      <td>Notebook X200</td>\n",
        "      <td>Eletrônico</td>\n",
        "      <td>4500</td>\n",
+       "      <td>4500</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -105,6 +108,7 @@
        "      <td>Caneta Azul</td>\n",
        "      <td>Escritório</td>\n",
        "      <td>3</td>\n",
+       "      <td>30</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -117,6 +121,7 @@
        "      <td>Monitor 24\"</td>\n",
        "      <td>Eletrônico</td>\n",
        "      <td>900</td>\n",
+       "      <td>1800</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -129,6 +134,7 @@
        "      <td>Teclado Mecânico</td>\n",
        "      <td>Eletrônico</td>\n",
        "      <td>350</td>\n",
+       "      <td>1050</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -141,6 +147,7 @@
        "      <td>Caderno 200fl</td>\n",
        "      <td>Escritório</td>\n",
        "      <td>25</td>\n",
+       "      <td>125</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -152,6 +159,7 @@
        "      <td>SC</td>\n",
        "      <td>Impressora Laser</td>\n",
        "      <td>Eletrônico</td>\n",
+       "      <td>1100</td>\n",
        "      <td>1100</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -165,6 +173,7 @@
        "      <td>Mouse Óptico</td>\n",
        "      <td>Eletrônico</td>\n",
        "      <td>80</td>\n",
+       "      <td>320</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
@@ -177,6 +186,7 @@
        "      <td>Fone Bluetooth</td>\n",
        "      <td>Eletrônico</td>\n",
        "      <td>250</td>\n",
+       "      <td>500</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
@@ -189,6 +199,7 @@
        "      <td>Pendrive 64GB</td>\n",
        "      <td>Eletrônico</td>\n",
        "      <td>70</td>\n",
+       "      <td>420</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
@@ -200,6 +211,7 @@
        "      <td>RS</td>\n",
        "      <td>Cadeira Gamer</td>\n",
        "      <td>Eletrônico</td>\n",
+       "      <td>1200</td>\n",
        "      <td>1200</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -219,17 +231,17 @@
        "8      1009          10         110           6   Diego Martins     DF   \n",
        "9      1010           6         105           1  Lucas Oliveira     RS   \n",
        "\n",
-       "       Nome_Produto   Categoria  Preco_Unitario  \n",
-       "0     Notebook X200  Eletrônico            4500  \n",
-       "1       Caneta Azul  Escritório               3  \n",
-       "2       Monitor 24\"  Eletrônico             900  \n",
-       "3  Teclado Mecânico  Eletrônico             350  \n",
-       "4     Caderno 200fl  Escritório              25  \n",
-       "5  Impressora Laser  Eletrônico            1100  \n",
-       "6      Mouse Óptico  Eletrônico              80  \n",
-       "7    Fone Bluetooth  Eletrônico             250  \n",
-       "8     Pendrive 64GB  Eletrônico              70  \n",
-       "9     Cadeira Gamer  Eletrônico            1200  "
+       "       Nome_Produto   Categoria  Preco_Unitario  valorTotal  \n",
+       "0     Notebook X200  Eletrônico            4500        4500  \n",
+       "1       Caneta Azul  Escritório               3          30  \n",
+       "2       Monitor 24\"  Eletrônico             900        1800  \n",
+       "3  Teclado Mecânico  Eletrônico             350        1050  \n",
+       "4     Caderno 200fl  Escritório              25         125  \n",
+       "5  Impressora Laser  Eletrônico            1100        1100  \n",
+       "6      Mouse Óptico  Eletrônico              80         320  \n",
+       "7    Fone Bluetooth  Eletrônico             250         500  \n",
+       "8     Pendrive 64GB  Eletrônico              70         420  \n",
+       "9     Cadeira Gamer  Eletrônico            1200        1200  "
       ]
      },
      "metadata": {},
@@ -240,9 +252,9 @@
     "df_medio = pd.merge(right=df_clientes, left=df_vendas, on=\"ID_Cliente\", how=\"left\")\n",
     "df_completo = pd.merge(df_medio, df_produtos, on=\"ID_Produto\")\n",
     "\n",
-    "display (df_completo)\n",
+    "df_completo['valorTotal'] = df_completo['Quantidade'] * df_completo['Preco_Unitario']\n",
     "\n",
-    "\n"
+    "display (df_completo)"
    ]
   }
  ],
