--- a/exGrupo.ipynb
+++ b/exGrupo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "ae2b83e5",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "3843fffd",
    "metadata": {},
    "outputs": [
@@ -256,6 +256,241 @@
     "\n",
     "display (df_completo)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8b2fe8ef",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID_Venda</th>\n",
+       "      <th>ID_Cliente</th>\n",
+       "      <th>ID_Produto</th>\n",
+       "      <th>Quantidade</th>\n",
+       "      <th>Nome_Cliente</th>\n",
+       "      <th>Estado</th>\n",
+       "      <th>Nome_Produto</th>\n",
+       "      <th>Categoria</th>\n",
+       "      <th>Preco_Unitario</th>\n",
+       "      <th>valorTotal</th>\n",
+       "      <th>Prioridade</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1001</td>\n",
+       "      <td>1</td>\n",
+       "      <td>101</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Maria Silva</td>\n",
+       "      <td>SP</td>\n",
+       "      <td>Notebook X200</td>\n",
+       "      <td>Eletrônico</td>\n",
+       "      <td>4500</td>\n",
+       "      <td>4500</td>\n",
+       "      <td>Expresso</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1002</td>\n",
+       "      <td>3</td>\n",
+       "      <td>106</td>\n",
+       "      <td>10</td>\n",
+       "      <td>Ana Costa</td>\n",
+       "      <td>MG</td>\n",
+       "      <td>Caneta Azul</td>\n",
+       "      <td>Escritório</td>\n",
+       "      <td>3</td>\n",
+       "      <td>30</td>\n",
+       "      <td>Normal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1003</td>\n",
+       "      <td>2</td>\n",
+       "      <td>104</td>\n",
+       "      <td>2</td>\n",
+       "      <td>João Pereira</td>\n",
+       "      <td>RJ</td>\n",
+       "      <td>Monitor 24\"</td>\n",
+       "      <td>Eletrônico</td>\n",
+       "      <td>900</td>\n",
+       "      <td>1800</td>\n",
+       "      <td>Expresso</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1004</td>\n",
+       "      <td>5</td>\n",
+       "      <td>103</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Carla Lima</td>\n",
+       "      <td>PR</td>\n",
+       "      <td>Teclado Mecânico</td>\n",
+       "      <td>Eletrônico</td>\n",
+       "      <td>350</td>\n",
+       "      <td>1050</td>\n",
+       "      <td>Normal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1005</td>\n",
+       "      <td>4</td>\n",
+       "      <td>107</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Pedro Souza</td>\n",
+       "      <td>BA</td>\n",
+       "      <td>Caderno 200fl</td>\n",
+       "      <td>Escritório</td>\n",
+       "      <td>25</td>\n",
+       "      <td>125</td>\n",
+       "      <td>Normal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1006</td>\n",
+       "      <td>7</td>\n",
+       "      <td>108</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Fernanda Alves</td>\n",
+       "      <td>SC</td>\n",
+       "      <td>Impressora Laser</td>\n",
+       "      <td>Eletrônico</td>\n",
+       "      <td>1100</td>\n",
+       "      <td>1100</td>\n",
+       "      <td>Expresso</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>1007</td>\n",
+       "      <td>8</td>\n",
+       "      <td>102</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Rafael Gomes</td>\n",
+       "      <td>PE</td>\n",
+       "      <td>Mouse Óptico</td>\n",
+       "      <td>Eletrônico</td>\n",
+       "      <td>80</td>\n",
+       "      <td>320</td>\n",
+       "      <td>Normal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>1008</td>\n",
+       "      <td>9</td>\n",
+       "      <td>109</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Beatriz Rocha</td>\n",
+       "      <td>CE</td>\n",
+       "      <td>Fone Bluetooth</td>\n",
+       "      <td>Eletrônico</td>\n",
+       "      <td>250</td>\n",
+       "      <td>500</td>\n",
+       "      <td>Normal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>1009</td>\n",
+       "      <td>10</td>\n",
+       "      <td>110</td>\n",
+       "      <td>6</td>\n",
+       "      <td>Diego Martins</td>\n",
+       "      <td>DF</td>\n",
+       "      <td>Pendrive 64GB</td>\n",
+       "      <td>Eletrônico</td>\n",
+       "      <td>70</td>\n",
+       "      <td>420</td>\n",
+       "      <td>Normal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>1010</td>\n",
+       "      <td>6</td>\n",
+       "      <td>105</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Lucas Oliveira</td>\n",
+       "      <td>RS</td>\n",
+       "      <td>Cadeira Gamer</td>\n",
+       "      <td>Eletrônico</td>\n",
+       "      <td>1200</td>\n",
+       "      <td>1200</td>\n",
+       "      <td>Expresso</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   ID_Venda  ID_Cliente  ID_Produto  Quantidade    Nome_Cliente Estado  \\\n",
+       "0      1001           1         101           1     Maria Silva     SP   \n",
+       "1      1002           3         106          10       Ana Costa     MG   \n",
+       "2      1003           2         104           2    João Pereira     RJ   \n",
+       "3      1004           5         103           3      Carla Lima     PR   \n",
+       "4      1005           4         107           5     Pedro Souza     BA   \n",
+       "5      1006           7         108           1  Fernanda Alves     SC   \n",
+       "6      1007           8         102           4    Rafael Gomes     PE   \n",
+       "7      1008           9         109           2   Beatriz Rocha     CE   \n",
+       "8      1009          10         110           6   Diego Martins     DF   \n",
+       "9      1010           6         105           1  Lucas Oliveira     RS   \n",
+       "\n",
+       "       Nome_Produto   Categoria  Preco_Unitario  valorTotal Prioridade  \n",
+       "0     Notebook X200  Eletrônico            4500        4500   Expresso  \n",
+       "1       Caneta Azul  Escritório               3          30     Normal  \n",
+       "2       Monitor 24\"  Eletrônico             900        1800   Expresso  \n",
+       "3  Teclado Mecânico  Eletrônico             350        1050     Normal  \n",
+       "4     Caderno 200fl  Escritório              25         125     Normal  \n",
+       "5  Impressora Laser  Eletrônico            1100        1100   Expresso  \n",
+       "6      Mouse Óptico  Eletrônico              80         320     Normal  \n",
+       "7    Fone Bluetooth  Eletrônico             250         500     Normal  \n",
+       "8     Pendrive 64GB  Eletrônico              70         420     Normal  \n",
+       "9     Cadeira Gamer  Eletrônico            1200        1200   Expresso  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "def classificarVendas(valor):\n",
+    "\n",
+    "    if valor > 500:\n",
+    "        return 'Expresso'\n",
+    "    else:\n",
+    "        return 'Normal'\n",
+    "    \n",
+    "df_completo['Prioridade'] = df_completo['Preco_Unitario'].apply(classificarVendas)\n",
+    "display(df_completo)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d6df685e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
